# mizar-rs

./: .gitignore  Cargo.toml  README.md  analyze-mml.sh  apply-patch.sh  cfg-blast.sh  download-mml.sh  export-mml.sh  mk-bootstrap.sh  mml.patch  rustfmt.toml  transfer-mml.sh
itp2023/: .gitignore  README.md  mizar-line-counts.txt  mizar-rs-line-counts.txt
itp2023/false1/: false1.miz
itp2023/false2/: false2.miz
itp2023/false3/: false3.miz
itp2023/false4/: false4.miz
itp2023/runnerup/: runnerup.miz
src/: accom.rs  analyze.rs  ast.rs  bignum.rs  cache.rs  checker.rs  equate.rs  error.rs  export.rs  format.rs  global.rs  main.rs  parser.rs  proof.rs  reader.rs  types.rs  unify.rs  verify.rs  write.rs
src/equate/: polynomial.rs
src/parser/: article.rs  core.rs  json.rs  miz.rs  mod.rs  msm.rs
src/proof/: accom.rs  mod.rs  write.rs
