[package]
name = "mizar-rs"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2021"
description = "Mizar verifier toolchain"
repository = "https://github.com/digama0/mizar-rs"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["theorem", "proving", "proof", "verifier"]
categories = ["command-line-utilities", "development-tools", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
quick-xml = "0.41.0"
once_cell = "1.21"
enum-map = "2.7"
backtrace = "0.3"
itertools = "0.10"
paste = "1.0"
ctrlc = "3.5"
pretty = "0.12"
num-bigint = "0.5"
num-traits = "0.2"
stacker = "0.1"
memchr = "2.8"
radix_trie = "0.3"
im = "15.1"
bytecount = "0.6.9"
indicatif = "0.18"
clap = { version = "4.6.2", features = ["derive"] }
num_cpus = "1.17"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["unbounded_depth"] }
